--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/img/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shred Shed</title>
+    <title>Shred Shed Market</title>
   </head>
   <body>
     <div id="root"></div>
